# rtpengine

./: .dockerignore  .gitignore  .gitreview  .mailmap  .readthedocs.yaml  .release-version  .shellcheckrc  .travis.yml  Dockerfile  Makefile  README.md  groups  project.config  pyproject.toml  tox.ini
assets/: README.md
centos/: patch.sh  patch_macos.sh  rtpengine-centos-build.txt  rtpengine.spec  rtpengine.txt
daemon/: .gitignore  .ycm_extra_conf.py  Makefile  arena.c  audio_player.c  aux-test.c  aux.c  aux.h  auxlib.c  bencode.c  bencode.h  call.c  call.h  call_flags.c  call_interfaces.c  call_interfaces.h  cdr.c  cdr.h  cli.c  cli.h  codec.c  codec.h  compat.h  compress.c  control.c  control.h  control_ng.c  control_ng.h  control_ng_flags_parser.c  control_tcp.c  control_tcp.h  control_udp.c  control_udp.h  cookie_cache.c  cookie_cache.h  crypto.c  crypto.h  dtls.c  dtls.h  dtmf.c  (+70 more)
debian/: .gitignore  README.Debian  changelog  control  control.modules.in  copyright  dirs  dkms.conf.in  generate-gpu-dh-fragments.sh  generate-systemd-templates.sh  mediaproxy-ng-daemon.install  mediaproxy-ng-iptables.install  mediaproxy-ng.default  mediaproxy-ng.init  ngcp-mediaproxy-ng-daemon.default  ngcp-mediaproxy-ng-daemon.init  ngcp-mediaproxy-ng-daemon.postinst  ngcp-mediaproxy-ng-daemon.postrm  ngcp-mediaproxy-ng-daemon.prerm  ngcp-mediaproxy-ng-dev.install  ngcp-mediaproxy-ng-iptables.install  ngcp-mediaproxy-ng-kernel-dkms.postinst  ngcp-mediaproxy-ng-kernel-dkms.prerm  ngcp-mediaproxy-ng-kernel-source.links  ngcp-mediaproxy-ng.init  ngcp-rtpengine-daemon.default  (+38 more)
(+635 files in other folders)
